# bilibili-downloader

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
constants/: url.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: anime.rs  config.rs  download.rs  lib.rs  main.rs  path.rs  utils.rs  video.rs
src/access/: index.ts
src/components/: Divider.vue  GlobalHeader.vue  GlobalSider.vue
src/pages/: ConfigPage.vue  DownloadAnime.vue  DownloadInfo.vue  DownloadVideo.vue  SearchPage.vue
src/pages/download/: DownloadInfo.vue  DownloadedPage.vue  DownloadingPage.vue
src/router/: index.ts  routes.ts
src/store/: config.ts
src/styles/dark/: css-vars.css
src/types/: index.ts
src/utils/: api.ts
