[package]
name = "bilibili-downloader"
version = "0.1.0"
description = "an app to fetch videos and animates from bilibili"
authors = ["sakame"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_beta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2.3.2"
rusqlite = { version = "0.27", features = ["bundled"] }
lazy_static = "1.4"
regex = "1.7"
tokio = { version = "1.39.2", features = ["full"] }
async-std = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.13"
chrono = "0.4"
dirs-next = "2.0"
libloading = "0.7"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-notification = "2.0.0-rc.0"


